--- a/ai_for_dev/notebooks/fine_tuning_bert.ipynb
+++ b/ai_for_dev/notebooks/fine_tuning_bert.ipynb
@@ -15,74 +15,7 @@
     "id": "c1_6ZAq1bunH"
    },
    "source": [
-    "# Installs and Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 22011,
-     "status": "ok",
-     "timestamp": 1677023327496,
-     "user": {
-      "displayName": "Shaan Khosla",
-      "userId": "03281704052357658651"
-     },
-     "user_tz": 300
-    },
-    "id": "ZNllaJiVRB7e",
-    "outputId": "c3a31014-bd79-442c-bb85-a532bc12d3df",
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers==4.29.2 in /opt/homebrew/lib/python3.10/site-packages (4.29.2)\n",
-      "Requirement already satisfied: datasets==2.12.0 in /opt/homebrew/lib/python3.10/site-packages (2.12.0)\n",
-      "Requirement already satisfied: filelock in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (3.8.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.14.1 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (0.14.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (1.23.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (21.3)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (6.0)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (2022.9.13)\n",
-      "Requirement already satisfied: requests in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (2.28.1)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (0.13.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /opt/homebrew/lib/python3.10/site-packages (from transformers==4.29.2) (4.64.1)\n",
-      "Requirement already satisfied: pyarrow>=8.0.0 in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (10.0.0)\n",
-      "Requirement already satisfied: dill<0.3.7,>=0.3.0 in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (0.3.5.1)\n",
-      "Requirement already satisfied: pandas in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (1.5.1)\n",
-      "Requirement already satisfied: xxhash in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (3.1.0)\n",
-      "Requirement already satisfied: multiprocess in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (0.70.13)\n",
-      "Requirement already satisfied: fsspec[http]>=2021.11.1 in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (2022.11.0)\n",
-      "Requirement already satisfied: aiohttp in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (3.8.3)\n",
-      "Requirement already satisfied: responses<0.19 in /opt/homebrew/lib/python3.10/site-packages (from datasets==2.12.0) (0.18.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (22.1.0)\n",
-      "Requirement already satisfied: charset-normalizer<3.0,>=2.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (2.1.1)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (6.0.2)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (4.0.2)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (1.8.1)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (1.3.3)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp->datasets==2.12.0) (1.3.1)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/homebrew/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.14.1->transformers==4.29.2) (4.4.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/homebrew/lib/python3.10/site-packages (from packaging>=20.0->transformers==4.29.2) (3.0.9)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/homebrew/lib/python3.10/site-packages (from requests->transformers==4.29.2) (2.10)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/homebrew/lib/python3.10/site-packages (from requests->transformers==4.29.2) (1.26.13)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/lib/python3.10/site-packages (from requests->transformers==4.29.2) (2022.12.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas->datasets==2.12.0) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas->datasets==2.12.0) (2022.5)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->datasets==2.12.0) (1.16.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip3 install transformers==4.29.2 datasets==2.12.0"
+    "# Imports"
    ]
   },
   {
@@ -1073,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
